@@ -1,0 +1,2 @@
+Remove maintainer from uploaders.
+Fixed-Lintian-Tags: maintainer-also-in-uploaders
